@@ -1,7 +1,7 @@
 How to install sarge with the new debian-installer
 --------------------------------------------------
 
-This documents describes how to perform an installation with the new
+This document describes how to perform an installation with the new
 debian-installer, which will be released together with the upcoming
 Debian release, codename: sarge.
 
